--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   <title>Frontend Mentor | Product preview card component</title>
   <!-- css -->
   <link rel="stylesheet" href="output.css" />
@@ -24,9 +24,9 @@
 
     <div>
       <!-- Mobile Image -->
-      <img class="rounded-t-lg  md:hidden" src="/images/image-product-mobile.jpg" alt="product image with name written on it">
+      <img class="rounded-t-lg  md:hidden" src="images/image-product-mobile.jpg" alt="product image with name written on it">
       <!-- Desktop Image -->
-      <img class="rounded-l-lg hidden  md:block" src="/images/image-product-desktop.jpg" alt="product image with name writen on it">
+      <img class="rounded-l-lg hidden  md:block" src="images/image-product-desktop.jpg" alt="product image with name writen on it">
     </div>
 
     <div class="bg-background-white p-6 rounded-b-lg md:rounded-r-lg content">
